search and add favorite recipe

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;600&display=swap');
 .App {
+  font-family: 'Rajdhani', sans-serif;
+}
+
+.home-img {
+  width: 100%;
+  height: 480px;
+}
+.home-img img {
+  width: 100%;
+  height: 480px;
+  object-position: left top;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+
+.home-head {
+  text-transform: uppercase;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 30px;
+}
+
+.popular {
   text-align: center;
+  font-size: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.popular-intro {
+  text-align: center;
+  font-size: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.popular-images {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  padding-top: 16px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.popular-images img {
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
 }
