--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding-left: 40px;
-  padding-right: 40px;
+  padding-right: 10px;
   height: 48px;
 }
 
@@ -19,12 +19,12 @@
 
 .menu {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
+  width: 420px;
 }
 
 span {
-  margin-right: 20px;
   font-size: 16px;
   color: black;
   font-weight: 700;
